@@ -421,7 +421,7 @@ Teacher = "Teacher"
 TeacherView = "Teacher view"
 Text = "Text"
 ThreeColumns = "Three columns"
-ThreeColumnsGroupInactive = "Three columns group inactive"
+ThreeColumnsGroupInactive = "Three columns, group invisible tools in separate tab"
 Time = "Time"
 TimeOnCourse = "Time spent on course"
 TimesAccessed = "Times accessed"
@@ -443,7 +443,7 @@ TotalTime = "Total time"
 TotalTimesAccessed = "Total times accessed"
 TotalTimeSpent = "Total time spent"
 TwoColumns = "Two columns"
-TwoColumnsGroupInactive = "Two columns group inactive"
+TwoColumnsGroupInactive = "Two columns, group invisible tools in separate tab"
 Type = "Type"
 Unlimited = "Unlimited"
 Unsubscribe = "Unsubscribe"
